# devlogd

./: CLAUDE.md  README.md  SPEC_FIRST_VERSION.md  UNIVERSAL_API_CLIENT_TEMPLATE.md  pyproject.toml
src/devlogd/: __init__.py  cli.py  daemon.py
src/devlogd/core/: __init__.py  cdp_client.py  exceptions.py  log_event.py
src/devlogd/utils/: __init__.py  chrome.py
tests/: __init__.py  conftest.py  test_cdp_integration.py  test_chrome_utils.py  test_log_event.py
